Fix card alignments

--- a/frontend/src/app/teaching/teaching.component.scss
+++ b/frontend/src/app/teaching/teaching.component.scss
@@ -3,10 +3,12 @@ teaching-card {
     min-width: 100% !important;
     width: 100% !important;
     max-width: 100% !important;
+    padding-right: 32px;
 }
 
 notes-card {
     min-width: 100% !important;
     width: 100% !important;
     max-width: 100% !important;
+    padding-right: 32px;
 }
